--- a/thank.html
+++ b/thank.html
@@ -61,7 +61,7 @@
   <div class="container">
     <h1>Thank You!</h1>
     <p>Your order has been placed successfully. <br>Our maid we give you full satisfaction and have an horny hour.</p>
-    <a href="trisha.html" class="btn">Back to Home</a>
+    <a href="index.html" class="btn">Back to Home</a>
   </div>
 
 </body>
