--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <h2>Book Your Maid Now</h2>
 
     <div class="product">
-      <img src="C:\Users\LOKESH KANRAR\OneDrive\ドキュメント\Website\asset\trisha poojary 2.jpg" alt="Product Image">
+      <img src="trisha poojary 2.jpg" alt="Product Image">
       <h3>Online Maid</h3>
       <p>Free On First Visit. ₹1000/-</p>
     </div>
