--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <h2>Book Your Maid Now</h2>
 
     <div class="product">
-      <img src="trisha.jpg" alt="Product Image">
+      <img src="asset/trisha.jpg" alt="Product Image">
       <h3>Online Maid</h3>
       <p>Free On First Visit. ₹1000/-</p>
     </div>
