--- a/index.html
+++ b/index.html
@@ -134,6 +134,8 @@
         <option value="Kitchen Cleaning">Kitchen Cleaning</option>
         <option value="Bathroom Cleaning">Bathroom Cleaning</option>
         <option value="Full house cleaning">Full house Cleaning</option>
+        <option value="Bedroom Cleaning">Bedroom Cleaning</option>
+        <option value="Balcony Cleaning">Balcony Cleaning</option>
       </select>
 
       <label for="payment">Payment Mode</label>
@@ -144,7 +146,7 @@
         <option value="card">Debit/Credit Card</option>
       </select>
 
-      <button type="submit">Place Order</button>
+      <button type="submit">Confirm Booking</button>
     </form>
   </div>
 
